--- a/views/layouts/silicon.hbs
+++ b/views/layouts/silicon.hbs
@@ -13,16 +13,7 @@
     <!-- Theme switcher (color modes) -->
     <script src="/assets/js/theme-switcher.js"></script>
 
-    <!-- Favicon and Touch Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/favicon/site.webmanifest">
-    <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#6366f1">
-    <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
-    <meta name="msapplication-TileColor" content="#080032">
-    <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
+    {{> icons }}
 
     <!-- Vendor Styles -->
     <link rel="stylesheet" media="screen" href="/assets/vendor/boxicons/css/boxicons.min.css">
@@ -175,7 +166,7 @@
               </div>
               <div class="col-xl-4 col-lg-5 pt-2 pt-lg-0">
                 <h6 class="mb-2">Contact</h6>
-                <a href="mailto:hashimoto@machinestates.com" class="fw-medium">hashimoto@machinestates.com</a>
+                <a href="mailto:hashimoto@machinestates.com" class="fw-medium">sofia@machinestates.com</a>
               </div>
             </div>
           </div>
