M2-194: Adds error page and handling (M2-197)

--- a/views/round.hbs
+++ b/views/round.hbs
@@ -3,49 +3,14 @@
     <main class="page-wrapper">
 
 
-      <!-- Navbar -->
-      <!-- Remove "fixed-top" class to make navigation bar scrollable with the page -->
-      <header class="header navbar navbar-expand-lg bg-light border-bottom border-light shadow-sm fixed-top">
-        <div class="container px-3">
-          <a href="index.html" class="navbar-brand pe-3">
-            <img src="/assets/img/machinestates-2.png" width="200" alt="Machinestates">
-          </a>
-          <div id="navbarNav" class="offcanvas offcanvas-end">
-            <div class="offcanvas-header border-bottom">
-              <h5 class="offcanvas-title">Menu</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-            </div>
-            <div class="offcanvas-header border-top">
-              <a href="https://trading.machinestates.com" class="btn btn-primary w-100" target="_blank" rel="noopener">
-                <i class="bx bx-candles fs-4 lh-1 me-1"></i>
-                &nbsp;Trade
-              </a>
-            </div>      
-          </div>
-          <div class="form-check form-switch mode-switch pe-lg-1 ms-auto me-4" data-bs-toggle="mode">
-            <input type="checkbox" class="form-check-input" id="theme-mode">
-            <label class="form-check-label d-none d-sm-block" for="theme-mode">Light</label>
-            <label class="form-check-label d-none d-sm-block" for="theme-mode">Dark</label>
-          </div>
-          <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a href="https://trading.machinestates.com" class="btn btn-primary btn-sm fs-sm rounded d-none d-lg-inline-flex" target="_blank" rel="noopener">
-            <i class="bx bx-candles fs-5 lh-1 me-1"></i>
-            &nbsp;Trade
-          </a>
-        </div>
-      </header>
-
+      {{> silicon/navbar }}
 
       <!-- Page content -->
       <section class="container pt-5">
         <div class="row">
 
   
-          <!-- Sidebar (User info + Account menu) -->
+          <!-- Profile / Handle -->
           <aside class="col-lg-3 col-md-4 border-end pb-5 mt-n5">
             <div class="position-sticky top-0">
               <div class="text-center pt-5">
@@ -58,7 +23,7 @@
           </aside>
 
 
-          <!-- Account details -->
+          <!-- Story -->
           <div class="col-md-8 offset-lg-1 pb-5 mb-2 mb-lg-4 pt-md-5 mt-n3 mt-md-0">
             <div class="ps-md-3 ps-lg-0 mt-md-2 py-md-4">
               <h1 class="h2 pt-xl-1" style="margin-bottom: 0;">${{ score }}</h1>
