--- a/views/layouts/silicon.hbs
+++ b/views/layouts/silicon.hbs
@@ -166,7 +166,7 @@
               </div>
               <div class="col-xl-4 col-lg-5 pt-2 pt-lg-0">
                 <h6 class="mb-2">Contact</h6>
-                <a href="mailto:hashimoto@machinestates.com" class="fw-medium">sofia@machinestates.com</a>
+                <a href="mailto:sofia@machinestates.com" class="fw-medium">sofia@machinestates.com</a>
               </div>
             </div>
           </div>
