M2-194: Adds live pricing updates via Birdeye when available (M2-200)

--- a/views/layouts/silicon.hbs
+++ b/views/layouts/silicon.hbs
@@ -153,6 +153,12 @@
                   <a href="#useful-links" class="d-block text-dark dropdown-toggle d-lg-none py-2" data-bs-toggle="collapse">Useful Links</a>
                 </h6>
               </div>
+              <div id="useful-links" class="collapse d-lg-block" data-bs-parent="#footer-links">
+                  <ul class="nav flex-column mb-2 mb-lg-0">
+                    <li class="nav-item"><a href="/coins/hashcoin" class="nav-link d-inline-block px-0 pt-1 pb-2">Hashcoin</a></li>
+                    <li class="nav-item"><a href="/coins/cache" class="nav-link d-inline-block px-0 pt-1 pb-2">Cache</a></li>
+                  </ul>
+                </div>
               <div class="col-xl-4 col-lg-3">
                 <h6 class="mb-2">
                   <a href="#social-links" class="d-block text-dark dropdown-toggle d-lg-none py-2" data-bs-toggle="collapse">Socials</a>
