--- a/views/coin.hbs
+++ b/views/coin.hbs
@@ -2,13 +2,11 @@
     <!-- Wraps everything except footer to push footer to the bottom of the page if there is little content -->
     <main class="page-wrapper">
 
-
       {{> silicon/navbar }}
 
       <!-- Page content -->
       <section class="container pt-5">
         <div class="row">
-
   
           <!-- Profile / Handle -->
           <aside class="col-lg-3 col-md-4 border-end pb-5 mt-n5">
@@ -18,10 +16,12 @@
                   <img src="{{ image }}" alt="{{ name }}" class="d-block rounded-circle" width="120">
                 </div>
                 <h2 class="h5 mb-3">{{ name }}</h2>
+                {{#if price}}
+                <div class="text-sm fw-semibold mt-3">${{ price }} {{ symbol }}-USD</div>
+                {{/if}}
               </div>
             </div>
           </aside>
-
 
           <!-- Story -->
           <div class="col-md-8 offset-lg-1 pb-5 mb-2 mb-lg-4 pt-md-5 mt-n3 mt-md-0">
