--- a/views/layouts/silicon.hbs
+++ b/views/layouts/silicon.hbs
@@ -157,6 +157,7 @@
                   <ul class="nav flex-column mb-2 mb-lg-0">
                     <li class="nav-item"><a href="/coins/hashcoin" class="nav-link d-inline-block px-0 pt-1 pb-2">Hashcoin</a></li>
                     <li class="nav-item"><a href="/coins/cache" class="nav-link d-inline-block px-0 pt-1 pb-2">Cache</a></li>
+                    <li class="nav-item"><a href="/coins/kaiote" class="nav-link d-inline-block px-0 pt-1 pb-2">Kaiote</a></li>
                   </ul>
                 </div>
               <div class="col-xl-4 col-lg-3">
